--- a/Alternance.html
+++ b/Alternance.html
@@ -193,7 +193,7 @@
                             <section id="footer">
                                 <div class="container">
                                     <ul class="copyright">
-                                        <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                                        <p>© Morais Vincent | Tous droits Réservés</p>
                                     </ul>
                                 </div>
                             </section>
