--- a/Alternance.html
+++ b/Alternance.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Portefolio Vincent Morais</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -177,7 +177,7 @@
                                                 
                                                 <embed src="documents/formulaire-apprenti.pdf" type="application/pdf" style="width:40vw;height:600px;" />
                         
-                                                <p>Cliquez <a href="Rapport-Activite-Stage1" target="_blank">ici</a> si le document ne s'affiche pas.</p>
+                                                <p>Cliquez <a href="documents/formulaire-apprenti.pdf" target="_blank">ici</a> si le document ne s'affiche pas.</p>
                                                </div>
                                             </div>
                                         </div>    
