--- a/Compétences.html
+++ b/Compétences.html
@@ -88,11 +88,11 @@
 										<div class="card card_portefeuillecompet">
 											<div class="card-body">
 												<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex align-items-center">
-													<embed src="documents/BTSSIO.pdf" type="application/pdf" width="100%" height="500px" />
+													<embed src="documents/Tableau.pdf" type="application/pdf" width="100%" height="500px" />
 												</div>
 					<br/>
 												<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
-													<p>Si le fichier n'apparaît pas, veuillez <a href="documents/portefeuille_competences.pdf" target="_blank" style="color: #00afee">cliquer ici</a></p>
+													<p>Si le fichier n'apparaît pas, veuillez <a href="documents/Tableau.pdf" target="_blank" style="color: #00afee">cliquer ici</a></p>
 												</div>
 											</div>
 										</div>
@@ -104,7 +104,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<p>© Morais Vincent | Tous droits Réservés</p>
 							</ul>
 						</div>
 					</section>
