--- a/Veille.html
+++ b/Veille.html
@@ -359,7 +359,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; </li><li> <a href="http://html5up.net"></a></li>
+								<p>© Morais Vincent | Tous droits Réservés</p>
 							</ul>
 						</div>
 					</section>
