--- a/Projet.html
+++ b/Projet.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Portefolio Vincent Morais</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -164,7 +164,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<p>© Morais Vincent | Tous droits Réservés</p>
 							</ul>
 						</div>
 					</section>
