--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<p>© Morais Vincent | Tous droits Réservés</p>
 							</ul>
 						</div>
 					</section>
